# projeto01

./: .coverage  LICENSE  README.md  db.sqlite3  projeto01.css  projeto01.html  pyproject.toml  requirements.txt
.github/workflows/: django_ci.yml
portfolio/: settings.py  urls.py
portfolio/base/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
portfolio/base/migrations/: 0001_initial.py  0002_produto.py  0003_contato_delete_comentario_delete_produto.py
portfolio/base/templates/portfolio/: projeto01.html
portfolio/base/templates/portfolio/css/: projeto01.css
portfolio/base/templates/portfolio/img/: Diagrama sem nome.drawio
portfolio/base/tests/: tests_get.py  tests_post.py
static/css/: index.html  ops.css  projeto01.css  style.css
