[tool.poetry]
name = "projeto01"
version = "0.1.0"
description = "Projeto portfólio com Django"
authors = ["Thiago <thiagohenriquedelimajaques@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
