[tool.poetry]
name = "projeto01"
version = "0.1.0"
description = "Projeto portfólio com Django"
authors = ["Thiago <thiagohenriquedelimajaques@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.9.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.8.2"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "portfolio.settings"
python_files = ["test*.py", "*_test.py", "*.p_testy"]

[tool.ruff]
line-length = 120
exclude = ['./portfolio/base/migrations']

[tool.ruff.lint]
select = ['I',]
ignore = ['PLR2004']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
